// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AvatarCloud component should accept a maxAvatarWidth 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?1",
              "url": "https://picsum.photos/200?1",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={2}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?2",
              "url": "https://picsum.photos/200?2",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?3",
              "url": "https://picsum.photos/200?3",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a minAvatarWidth 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    avatarWidth="90%"
    getXYPositions={
      Object {
        "left": "1.2345678899999997%",
        "top": "1.2345678899999997%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "1.2345678899999997%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "1.2345678899999997%",
        "width": "90%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?1",
              "url": "https://picsum.photos/200?1",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={2}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="90%"
    getXYPositions={
      Object {
        "left": "1.2345678899999997%",
        "top": "1.2345678899999997%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "1.2345678899999997%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "1.2345678899999997%",
        "width": "90%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?2",
              "url": "https://picsum.photos/200?2",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="90%"
    getXYPositions={
      Object {
        "left": "1.2345678899999997%",
        "top": "1.2345678899999997%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "1.2345678899999997%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "1.2345678899999997%",
        "width": "90%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?3",
              "url": "https://picsum.photos/200?3",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a primaryAvatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "width": "50%",
        "zIndex": 100,
      }
    }
  >
    <Image
      avatarWidth="50%"
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "opacity": 0,
          "width": "50%",
          "zIndex": 100,
        }
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?1",
              "url": "https://picsum.photos/200?1",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={3}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?2",
              "url": "https://picsum.photos/200?2",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={2}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?3",
              "url": "https://picsum.photos/200?3",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?1",
              "url": "https://picsum.photos/200?1",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={2}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?2",
              "url": "https://picsum.photos/200?2",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?3",
              "url": "https://picsum.photos/200?3",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should render as isLoading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "width": "50%",
        "zIndex": 100,
      }
    }
  >
    <Image
      avatarWidth="50%"
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "",
            "url": "",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "opacity": 0,
          "width": "50%",
          "zIndex": 100,
        }
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={2}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The AvatarCloud component should render without blur effect 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={0}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?1",
              "url": "https://picsum.photos/200?1",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={1}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?2",
              "url": "https://picsum.photos/200?2",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    avatarWidth="10%"
    getXYPositions={
      Object {
        "left": "11.11111101%",
        "top": "11.11111101%",
      }
    }
    order={2}
    style={
      Object {
        "aspectRatio": 1,
        "borderRadius": 1000,
        "left": "11.11111101%",
        "overflow": "hidden",
        "position": "absolute",
        "top": "11.11111101%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/200?3",
              "url": "https://picsum.photos/200?3",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
